# DAMe

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-11-dame-python3-port.md  2026-04-11-dame-rust-port.md  2026-04-13-dame-iupac-byte-matcher.md  2026-04-14-dame-v2.3-perf.md
docs/superpowers/specs/: 2026-04-11-dame-python3-rust-port-design.md
python/: pyproject.toml
python/dame/: __main__.py  chimera_check.py  decollapse.py  filter.py  modules_chimera_check.py  modules_filter.py  modules_sort.py  rsi.py  sort.py
python/tests/: test_chimera_check.py  test_decollapse.py  test_filter.py  test_rsi.py  test_sort.py
rust/: Cargo.toml
rust/src/: chimera_check.rs  decollapse.rs  filter.rs  lib.rs  main.rs  rsi.rs  sort.rs
rust/tests/: chimera_test.rs  decollapse_test.rs  filter_test.rs  rsi_test.rs  sort_test.rs
tests/fixtures/: Comparisons_4PCRs.txt  Primers.txt  Tags.txt  sample.fastq
tests/integration/: run_chimera.sh  run_decollapse.sh  run_filter.sh  run_pipeline.sh  run_rsi.sh  run_sort.sh
tutorial/: Comparisons_2PCRs.fasta  Comparisons_2PCRs.txt  Comparisons_2outOf2PCRs.countsThreshold2.txt  Comparisons_2outOf2PCRs.txt  FilteredReads.fna  FilteredReads_atLeast2.fasta  FilteredReads_atLeast2.threshold.fasta  PS1_files.txt  PS2_files.txt  PSinfo.txt  Pool1.fastq  Pool2.fastq  Primers.txt  README.md  RSI_output.txt  Tags.txt  generate_tutorial_data.py
tutorial/pool1/: SummaryCounts.txt  tag1_tag2.txt  tag1_tag6.txt  tag5_tag6.txt
tutorial/pool2/: SummaryCounts.txt  tag1_tag6.txt  tag3_tag4.txt  tag7_tag8.txt
