[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dame-py"
version = "3.0.0"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24"]

[project.scripts]
dame-py = "dame.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dame*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
