[package]
name = "dame"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dame"
path = "src/main.rs"

[lib]
name = "dame"
path = "src/lib.rs"

[dependencies]
ahash = "0.8"
clap = { version = "4", features = ["derive"] }
regex = "1"
ndarray = "0.15"
anyhow = "1"
indexmap = "2"
needletail = "0.5"

[dev-dependencies]
tempfile = "3"
